# ShapeSPH

./: CMakeLists.txt
ShapeDescriptor/: ShapeDescriptor.cpp
SignalProcessing/: Fourier2D.inl  FourierS2.inl  FourierSO3.inl
Soft10/: naive_synthesis.cpp  newFCT.cpp  primitive_FST.cpp  rotate_so3.h  seminaive.cpp
Util/: Geometry.h  Ply.inl
